# the-overlord-of-beggars

./: README.md  docker-compose.yml
.github/: FUNDING.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  utils.py
backend/app/data_sources/: custom_types.py
backend/app/data_sources/family_mart/: __init__.py  get_store_detail.py  get_stores_by_geolocation.py  model.py  share.py
backend/app/data_sources/open_point/: __init__.py  get_access_token.py  get_item_categories.py  get_nearby_stores_by_geolocation.py  get_store_by_store_id.py  get_store_detail.py  get_stores_by_address.py  get_stores_by_geolocation.py  model.py  share.py
backend/app/models/: brand.py  geolocation.py  response.py  store.py
backend/app/services/: family_mart_store_search_service.py  open_point_store_search_service.py  stock_search_service.py  store_search_reducer.py  store_search_service.py
backend/data_sources/open_point/: get_access_token.py  get_item_categories.py  get_nearby_stores_by_geolocation.py  get_store_detail.py  get_stores_by_address.py  get_stores_by_geolocation.py  model.py
backend/models/: stock.py  store.py
crawler/: .env.example  config.py  embedding.ipynb  embedding.py  get_stores_by_city_and_town.py  get_towns_by_city_id.py  init.py  list_of_city.py  models.py  requirements.txt  seven-eleven-stores.ipynb  seven-eleven-stores.py  sql.py
docs/: 7-11.md  development.md  family-mart.md  frontend-prd.md  prd.md  questions.md  requirement.md
frontend/: .env.example  (+7 more)
(+66 files in other folders)
